public/css/app.css
/* ... */
@media only screen and (max-width: 365px) {

    .cart-img {
        width: 120px;
    }

    .cart-content {
        height: 480px;
        overflow: scroll;
    }

    .sale-cart {
        top: 48px
    }

    .supp_num {
        font-size: 14px !important;
    }
    .content-mobile-menu {
        margin-top: 2px;
        margin-left: -311px;
    }
    .product-list-mobile {
        width: 175px;
        margin-bottom: 5px;
    }

    .section-item {
        width: 325px !important;
    }
    .login-form {
        width: 326px;
    }
    .social {
        width: 49px;
        height: 37px;
    }
    .benefits-description {
        width: 315px !important;
    }

    .search {
        width: 250px;
    }

@media only screen and (max-width: 345px) {
    .social {
        width: 49px;
        height: 35px;
    }
    .search {
        width: 224px;
    }

    .benefits-description {
        width: 290px !important;
    }

    .section-banner {
        width: 100% !important;
    }
}
}

.sort-div{
    width: 320px;
}

.mobile-nav-icons {
    width: 20px;
    height: 20px;
}

.faq {
    padding: 10px 10px 10px 30px !important;
    height: 66px;
    background: linear-gradient(0deg, #E3EDF7, #E3EDF7);
    box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 3px 3px 4px rgba(93, 148, 204, 0.25);
    border-radius: 15px;

}

.product-line {
    box-shadow:
            1px 1px 0 0px white,
            0 0 0 1px rgba(205, 223, 239, 0.85);
    width: 67%;
    overflow: hidden
}

.product-line-recommended {
    box-shadow:
            1px 1px 0 0px white,
            0 0 0 1px rgba(205, 223, 239, 0.85);
    width: 59%;
    overflow: hidden
}

button:focus {outline:0;}

.select-sort select {
    -moz-appearance:none; /* Firefox */
    -webkit-appearance:none; /* Safari and Chrome */
    appearance:none;
    background-image: url("/images/sort-arrow.png");

    background-repeat: no-repeat;
    background-position-x: 96%;
    background-position-y: 20px;

}


.faq-text {
    padding: 25px;
    font-family: Montserrat;
    font-style: normal;
    font-weight: normal;
    font-size: 25px;
    line-height: 30px;
    display: flex;
    align-items: center;

    color: #43637A;
}

.faq-text-div {
    box-shadow:
            0 0 0 3px hsl(0, 0%, 210%),
            0 0 0 7px rgba(205, 223, 239, 0.85);
    box-sizing: border-box;
    border-radius: 11px;
}


.line1 {
    margin-top: 40px;
    width: 320px;
    height: 3px;


    background: #FFFFFF;
    border-radius: 0px 0px 1px 1px;
}

.line2 {
    width: 320px;
    height: 3px;
    margin-top: -5px;

    background: #C9DBEF;
    border-radius: 1px 1px 0px 0px;
}
.supp_num {

    margin-bottom: 30px;

    width: 650px;
    height: 37px;

    font-family: Montserrat;
    font-style: normal;
    font-weight: normal;
    font-size: 30px;
    line-height: 37px;
    /* identical to box height */

    display: flex;
    align-items: center;
    text-align: center;
    text-transform: uppercase;

    color: #015442;

    text-shadow: -4px -4px 4px rgba(255, 255, 255, 0.8), 3px 3px 4px #8FACC1
}

.sale-cart {
    top: 82px;
}

.addToCartSvg {
    width: 26px;
    z-index: 10000;
}

@media only screen and (min-width: 1900px) {
    #close-cart, #closecheck {
        right: 33rem !important;
    }
}

